--- a/examples/k2/requirements.txt
+++ b/examples/k2/requirements.txt
@@ -5,6 +5,9 @@ pymap3d==3.0.1
 matplotlib==3.7.1
 scipy==1.10.1
 tqdm==4.65.0
+jupyter-lab
+PyYAML==6.0
+pymavlink==2.4.38
 
 contourpy==1.0.7
 cycler==0.11.0
